Simplify workaround for the overflow issue

--- a/src/vs/workbench/browser/parts/editor/media/tabstitlecontrol.css
+++ b/src/vs/workbench/browser/parts/editor/media/tabstitlecontrol.css
@@ -129,8 +129,9 @@
 	flex: 1 0 0; /* all tabs are evenly sized and grow */
 }
 
-.monaco-workbench .part.editor > .content .editor-group-container > .title > .tabs-and-actions-container.wrapping .tabs-container > .tab.sizing-fixed.last-in-row:not(:last-child) {
-	flex-grow: 0; /* prevent last tab in a row from moving to next row when tab widths are fixed */
+.monaco-workbench .part.editor > .content .editor-group-container > .title .tabs-container > .tab.sizing-fixed.last-in-row {
+	/* prevent last tab in a row from moving to next row when tab widths are fixed in case rounding errors make the fixed tabs grow over the size of the tabs container */
+	min-width: calc(var(--tab-sizing-current-width, 50px) - 1px);
 }
 
 .monaco-workbench .part.editor > .content .editor-group-container > .title > .tabs-and-actions-container.wrapping .tabs-container > .tab.sizing-fit.last-in-row:not(:last-child) {
